Specify a minimum version of Types::Const

--- a/dist.ini
+++ b/dist.ini
@@ -39,6 +39,9 @@ exclude_filename = MANIFEST.SKIP
 remove = strict
 remove = warnings
 
+[Prereqs]
+Types::Const = v0.3.0
+
 [Prereqs / TestRequires]
 Moo = 1.006000
 
