Remove some redundant dependencies
Carp is core, and Moo::Role is not likely to be split from Moo
any time soon.

--- a/dist.ini
+++ b/dist.ini
@@ -38,6 +38,8 @@ exclude_filename = MANIFEST.SKIP
 [RemovePrereqs]
 remove = strict
 remove = warnings
+remove = Carp
+remove = Moo::Role
 
 [Prereqs]
 Types::Const = v0.3.0
