Added long-overdue credit to Kang-min Liu 劉康民

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,9 @@ license = Artistic_2_0
 copyright_holder = Robert Rothenberg
 copyright_year   = 2018
 
+[Meta::Contributors]
+contributor = Kang-min Liu 劉康民 <gugod@gugod.org>
+
 [Keywords]
 keyword = Const::Fast
 keyword = constants
@@ -38,6 +41,7 @@ exclude_filename = MANIFEST.SKIP
 [RemovePrereqs]
 remove = strict
 remove = warnings
+remove = utf8
 remove = Carp
 remove = Moo::Role
 
