Recommend MooX::TypeTiny and Moose for testing

--- a/dist.ini
+++ b/dist.ini
@@ -53,6 +53,10 @@ Types::Const = v0.3.3
 [Prereqs / TestRequires]
 Moo = 1.006000
 
+[Prereqs / TestRecommends]
+MooX::TypeTiny = 0
+Moose = 0
+
 [EnsurePrereqsInstalled]
 :version = 0.003
 type = requires
