Add test for mixed Unicode

--- a/dist.ini
+++ b/dist.ini
@@ -116,6 +116,11 @@ version_extractor = Module::Metadata
 verify_prereqs = 1
 include = Storable
 
+[Test::MixedScripts]
+script = Common
+script = Latin
+script = Han
+
 [@Git]
 allow_dirty = dist.ini
 push_to     = origin master:master
