Add a security policy to the distribution

--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,7 @@ keyword = types
 [GatherDir]
 exclude_match = cpanfile*
 exclude_filename = MANIFEST.SKIP
+exclude_filename = SECURITY.md
 [PruneCruft]
 [CPANFile]
 [License]
@@ -59,6 +60,13 @@ Moose = 0
 type = requires
 type = recommends
 
+[SecurityPolicy]
+-policy = Individual
+-policy_version = 0.10
+timeframe = two weeks
+git_url = https://github.com/robrwo/MooX-Const
+report_url = https://github.com/robrwo/MooX-Const/security/advisories
+
 [GitHub::Meta]
 repo = git://github.com/robrwo/MooX-Const.git
 
@@ -70,6 +78,7 @@ location = build
 
 [CopyFilesFromBuild]
 copy = README.md
+copy = SECURITY.md
 copy = cpanfile
 copy = MANIFEST.SKIP
 
