Add LICENSE to the repo root

--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,7 @@ keyword = types
 
 [GatherDir]
 exclude_match = cpanfile*
+exclude_filename = LICENSE
 exclude_filename = MANIFEST.SKIP
 exclude_filename = SECURITY.md
 [PruneCruft]
@@ -81,6 +82,7 @@ copy = README.md
 copy = SECURITY.md
 copy = cpanfile
 copy = MANIFEST.SKIP
+copy = LICENSE
 
 [Generate::ManifestSkip]
 :version = v0.1.4
