Fix prereq metadata

--- a/dist.ini
+++ b/dist.ini
@@ -48,10 +48,26 @@ remove = Moose
 [Prereqs]
 Types::Const = v0.3.3
 
+[Prereqs / BuildRequires ]
+-phase = build
+-relationship = requires
+ExtUtils::MakeMaker = 7.22
+Module::Metadata = 1.000015
+
+[Prereqs / DevelopRequires ]
+-phase = develop
+-relationship = requires
+Software::Security::Policy::Individual = 0.11
+Test::MixedScripts = v0.3.0
+
 [Prereqs / TestRequires]
+-phase = test
+-relationship = requires
 Moo = 1.006000
 
 [Prereqs / TestRecommends]
+-phase = test
+-relationship = recommends
 Moo = 2.004000
 MooX::TypeTiny = 0
 Moose = 0
