--- a/dist.ini
+++ b/dist.ini
@@ -85,7 +85,7 @@ git_url = https://github.com/robrwo/MooX-Const
 report_url = https://github.com/robrwo/MooX-Const/security/advisories
 
 [GitHub::Meta]
-repo = git://github.com/robrwo/MooX-Const.git
+repo = robrwo/MooX-Const.git
 
 [PodWeaver]
 [ReadmeAnyFromPod]
