--- a/dist.ini
+++ b/dist.ini
@@ -88,7 +88,7 @@ report_url = https://github.com/robrwo/MooX-Const/security/advisories
 repo = robrwo/MooX-Const.git
 
 [PodWeaver]
-[ReadmeAnyFromPod]
+[UsefulReadme]
 type     = gfm
 filename = README.md
 location = build
