Move author tests into the xt directory
This also runs the author tests before release.

--- a/dist.ini
+++ b/dist.ini
@@ -29,12 +29,12 @@ exclude_filename = SECURITY.md
 [PruneCruft]
 [CPANFile]
 [License]
-[ExtraTests]
 [ExecDir]
 [ShareDir]
 [MakeMaker]
 [Manifest]
 [TestRelease]
+[CheckExtraTests]
 [ConfirmRelease]
 [Signature]
 [UploadToCPAN]
