Comment-out EnsurePrereqsInstalled

--- a/dist.ini
+++ b/dist.ini
@@ -72,10 +72,10 @@ Moo = 2.004000
 MooX::TypeTiny = 0
 Moose = 0
 
-[EnsurePrereqsInstalled]
-:version = 0.003
-type = requires
-type = recommends
+; [EnsurePrereqsInstalled]
+; :version = 0.003
+; type = requires
+; type = recommends
 
 [SecurityPolicy]
 -policy = Individual
