Add more author tests

--- a/dist.ini
+++ b/dist.ini
@@ -141,7 +141,15 @@ version_extractor = Module::Metadata
 verify_prereqs = 1
 include = Storable
 
+[Test::PodSpelling]
+
 [Test::MixedScripts]
+; authordep Test::MixedScripts
+
+[Test::CPAN::Changes]
+; authordep Test::CPAN::Changes
+
+[Test::UnusedVars]
 
 [@Git]
 allow_dirty = dist.ini
