--- a/dist.ini
+++ b/dist.ini
@@ -78,6 +78,7 @@ Moose = 0
 ; type = recommends
 
 [SecurityPolicy]
+; authordep Software::Security::Policy::Individual
 -policy = Individual
 -policy_version = 0.10
 timeframe = two weeks
@@ -88,7 +89,12 @@ report_url = https://github.com/robrwo/MooX-Const/security/advisories
 repo = robrwo/MooX-Const.git
 
 [PodWeaver]
+; authordep Pod::Weaver::Plugin::AppendPrepend
+; authordep Pod::Weaver::Section::Contributors
+; authordep Pod::Weaver::Section::SourceGitHub
+
 [UsefulReadme]
+; authordep Pod::Markdown::Github
 type     = gfm
 filename = README.md
 location = build
@@ -110,16 +116,13 @@ x_authority    = cpan:RRWO
 [MetaJSON]
 [MetaYAML]
 
-; authordep Test::Warnings
-
-; authordep Pod::Weaver::Plugin::AppendPrepend
-; authordep Pod::Weaver::Section::Contributors
-; authordep Pod::Weaver::Section::SourceGitHub
-
 [PodSyntaxTests]
 [Test::CheckManifest]
+; authordep Test::DistManifest
 [Test::CleanNamespaces]
+; authordep Test::CleanNamespaces
 [Test::EOF]
+; authordep Test::EOF
 [Test::EOL]
 :version = 0.14
 [Test::Fixme]
@@ -130,11 +133,14 @@ critic_config = t/etc/perlcritic.rc
 
 [PodCoverageTests]
 [Test::Pod::LinkCheck]
+; authordep Test::Pod::LinkCheck
 [Test::Portability]
-; authordep Test::TrailingSpace
 [Test::TrailingSpace]
+; authordep Test::TrailingSpace
 filename_regex = \.(?:p[lm]|pod)\z
 [Test::Kwalitee]
+; authordep Test::Kwalitee
+
 [Test::ReportPrereqs]
 :version = 0.022
 version_extractor = Module::Metadata
