--- a/dist.ini
+++ b/dist.ini
@@ -124,7 +124,7 @@ x_authority    = cpan:RRWO
 [Test::MinimumVersion]
 [Test::NoTabs]
 [Test::Perl::Critic]
-critic_config = t/etc/perlcritic.rc
+critic_config = xt/etc/perlcritic.rc
 
 [PodCoverageTests]
 [Test::Pod::LinkCheck]
