--- a/dist.ini
+++ b/dist.ini
@@ -57,6 +57,7 @@ Module::Metadata = 1.000015
 -phase = develop
 -relationship = requires
 Software::Security::Policy::Individual = 0.11
+Test::CVE = 0.11
 Test::MixedScripts = v0.3.0
 
 [Prereqs / TestRequires]
